k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trend-frontend
  labels:
    app: trend-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trend-frontend
  template:
    metadata:
      labels:
        app: trend-frontend
    spec:
      containers:
        - name: trend-frontend
          image: ashok948/trend-app-repo:latest
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
