k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-frontend
spec:
  type: ClusterIP
  selector:
    app: trend-frontend
  ports:
    - port: 80
      targetPort: 80
